# Dev_Quality

./: README.md
TP1/COPY/: AbstractPiece.cpp  AbstractPiece.hpp  AbstractZone.cpp  AbstractZone.hpp  Bishop.cpp  Bishop.hpp  BlackAndWhitePiece.cpp  BlackAndWhitePiece.hpp  CMakeLists.txt  Chess.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessBoardWindow.cpp  ChessBoardWindow.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Makefile  Pawn.cpp  Pawn.hpp  Point.cpp  Point.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  SquareZone.cpp  SquareZone.hpp  ez-draw++.cpp  ez-draw++.hpp  main.cpp  meson.build  prog
